Added classes for managing BoxViews in a database.

--- a/Boxetheus/appsettings.json
+++ b/Boxetheus/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Boxetheus-2955a625-8ff9-4872-ad9d-ad9c31a5a6d0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Boxetheus-2955a625-8ff9-4872-ad9d-ad9c31a5a6d0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BoxetheusContext": "Server=(localdb)\\mssqllocaldb;Database=BoxetheusContext-e33191a2-3c5e-4e17-a681-8520e0d4c736;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
