--- a/Boxetheus/appsettings.json
+++ b/Boxetheus/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:boxetheusappdbserver.database.windows.net,1433;Initial Catalog=Boxetheus_dbapp;Persist Security Info=False;User ID=boxetheusadminuser@boxetheusappdbserver;Password=Products@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "BoxetheusContext": "Server=(localdb)\\mssqllocaldb;Database=BoxetheusContext-e33191a2-3c5e-4e17-a681-8520e0d4c736;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:boxetheusappdbserver.database.windows.net,1433;Initial Catalog=Boxetheus_dbapp;Persist Security Info=False;User ID=boxetheusadminuser@boxetheusappdbserver;Password=Products@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "BoxetheusContext": "Server=tcp:boxetheusappdbserver.database.windows.net,1433;Initial Catalog=Boxetheus_dbapp;Persist Security Info=False;User ID=boxetheusadminuser@boxetheusappdbserver;Password=Products@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
