Updated appsetting and README

--- a/Boxetheus/appsettings.json
+++ b/Boxetheus/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:boxetheusappserverdbserver.database.windows.net,1433;Initial Catalog=boxetheusappserver;Persist Security Info=False;User ID=boxetheusadminuser@boxetheusappdbserver;Password=Products@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
-    "BoxetheusContext": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Boxetheus-2955a625-8ff9-4872-ad9d-ad9c31a5a6d0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BoxetheusContext": "Server=tcp:boxetheusappserverdbserver.database.windows.net,1433;Initial Catalog=boxetheusappserver;Persist Security Info=False;User ID=boxetheusadminuser@boxetheusappdbserver;Password=Products@321;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
